--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="Particle.js"></script>
   <script language="javascript" type="text/javascript" src="Projectile.js"></script>
   <script language="javascript" type="text/javascript" src="Planet.js"></script>
   <script language="javascript" type="text/javascript" src="Player.js"></script>
@@ -13,6 +14,10 @@
   <script language="javascript" type="text/javascript" src="Text.js"></script>
   <script language="javascript" type="text/javascript" src="Functions.js"></script>
   <script language="javascript" type="text/javascript" src="Game.js"></script>
+  <script language="javascript" type="text/javascript" src="Dot.js"></script>
+  <script language="javascript" type="text/javascript" src="Ruin.js"></script>
+
+
 
 
   
