Fixed menus, new shot types & animations

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script language="javascript" type="text/javascript" src="Game.js"></script>
   <script language="javascript" type="text/javascript" src="Dot.js"></script>
   <script language="javascript" type="text/javascript" src="Ruin.js"></script>
+  <script language="javascript" type="text/javascript" src="SpecialProjectiles.js"></script>
+
 
 
 
