--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  
+  <link rel="stylesheet" href="style.css">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
@@ -17,15 +19,15 @@
   <script language="javascript" type="text/javascript" src="Dot.js"></script>
   <script language="javascript" type="text/javascript" src="Ruin.js"></script>
   <script language="javascript" type="text/javascript" src="SpecialProjectiles.js"></script>
-
-
-
-
-
   
   
 </head>
 
-<body> 
+<body>  
+  <div>
+    <h1>SpaceTanks</h1>
+  </div>
+    <div id="sketch-holder"></div> 
+    <p>Written in Javascript</p>
 </body>
 </html>
