--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="Menu.js"></script>
   <script language="javascript" type="text/javascript" src="Particle.js"></script>
   <script language="javascript" type="text/javascript" src="Projectile.js"></script>
   <script language="javascript" type="text/javascript" src="Planet.js"></script>
